--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "src/index.js",
   "repository": {},
   "author": "Mark Scripter",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "stylelint": "^7.10.1"
+  }
 }
