updated w/ local static server and build through postcss.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "a front end development work environment",
   "main": "src/index.js",
   "scripts": {
-    "build": "postcss -c postcss.config.js",
+    "build": "postcss -c postcss.config.js src/_script.css -o lib/script-styles.min.css",
     "lint": "stylelint src/**/*.css",
-    "test": ""
+    "test": "",
+    "start": "node server.js",
+    "watch": "npm run build -- -w"
   },
   "repository": {},
   "author": "Mark Scripter",
@@ -14,6 +16,7 @@
   "devDependencies": {
     "autoprefixer": "^7.1.1",
     "cssnano": "^3.10.0",
+    "express": "^4.15.3",
     "postcss": "^6.0.3",
     "postcss-cli": "^4.1.0",
     "postcss-cssnext": "^2.10.0",
