--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,5 +10,6 @@ jobs:
        - image: circleci/node:latest
      steps:
        - checkout
+       - run: npm install
        - run: npm run build
        - run: npm test
